src/test/deca/context/valid/minus_floatvar_float_minus_intvar_context.deca
// Description : 
// 
//      Test contextuellement correct de la soustraction d'un float et d'une variable int dans une variable float.
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    int x=63;
    float y= 3.5-x;
}