src/test/deca/context/invalid/plus_any_plus_any_plus_any_context.deca
// Description :
//
//      Test contextuellement incorrect de la somme d'un any et d'un any puis en sommant un autre any dans une variable float.
// 
// Résultats :
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y= 3 + "bonjour" + 2.5;
}